--- a/app/templates/impressum.html
+++ b/app/templates/impressum.html
@@ -24,5 +24,9 @@
             Welcher sich wiederum von <a href='https://kprverse.com'>KPR</a> inspirieren hat lassen.<br>
             Der <a href='https://codepen.io/Hyperplexed/pen/rNrJgrd'>codepen</a> zum vergleich.
         </p>
+        <p>
+            IpShare verwendet die IP2Location LITE-Datenbank für <a href="https://lite.ip2location.com">IP-Geolokalisierung</a>.
+        </p>
+
     </div>
 {% endblock %}
