--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -60,7 +60,7 @@ img {
 }
 
 .flag {
-    width: min(1.48*3vw, 1.48*2rem);
+    width: min(1.48 * 3vw, 1.48 * 2rem);
     align-self: center;
 }
 
@@ -118,12 +118,20 @@ input:focus {
 }
 
 #edit > div {
-    display: flex;
-    flex-direction: row;
+    display: grid;
 }
 
 #edit-valid, #edit-save {
-    margin-left: -32px;
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    justify-self: right;
+}
+
+#edit-name, #edit-addr {
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
 }
 
 #addrs > div > h1 {
@@ -165,3 +173,43 @@ main {
     column-gap: 0;
 }
 
+
+#hint {
+    color: var(--forground-highlight-color);
+    background-color: var(--background-highlight-color);
+    text-align: center;
+    padding-right: 16px;
+    width: 15px;
+    border: 1px solid var(--border-color);
+    border-radius: clamp(1rem, 2vw, 5rem);
+    z-index: 2;
+    grid-column: 1;
+    grid-row: 1;
+    justify-self: right;
+    margin: 0;
+    animation-name: animate_hint;
+    animation-duration: 400ms;
+    animation-delay: 20ms;
+    animation-fill-mode: both;
+}
+
+@keyframes animate_hint {
+    from {
+        width: 15px;
+    }
+    to {
+        width: 9rem;
+    }
+}
+
+.img-with-hint-container {
+    display: grid;
+    float: right;
+}
+
+.img-with-hint-container > img {
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    margin-left: 9rem;
+}
