--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -22,6 +22,7 @@
     width: 75vw;
     border-radius: clamp(1rem, 2vw, 5rem);
     text-decoration: none;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 #ip-addr > a:hover {
