--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,10 @@
                 <input id="edit-name" maxlength="48" placeholder="DEVICE NAME">
                 <img id="edit-save" src="/static/share.svg" alt="SAVE" class="hint_with_alt">
             </div>
-            <a id="token">API TOKEN: </a>
+            <div id="token-container">
+                <a id="token">API TOKEN: </a>
+                <img id="copy-token" src="/static/copy.svg" alt="COPY TOKEN" class="hint_with_alt">
+            </div>
         </div>
     </div>
 
