--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
             <a href="{{ url_for("ip_share_views.root") }}" data-letters="IPSHARE">IPSHARE</a>
             <a href="https://github.com/janluisho/ipshare" data-letters="GITHUB">GITHUB</a>
             <a href="{{ url_for("ip_share_views.impressum") }}" data-letters="IMPRESSUM">IMPRESSUM</a>
+            <a href="{{ url_for("ip_share_views.datenschutzerklaerung") }}" data-letters="DATENSCHUTZ">DATENSCHUTZ</a>
             <div id="nav-space"></div>
             {% if user.is_authenticated %}
                 <a href="{{ url_for("login_views.me") }}" data-letters={{ user.name.upper() }}>{{ user.name.upper() }}</a>
