--- a/app/templates/datenschutzerklaerung.html
+++ b/app/templates/datenschutzerklaerung.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Impressum{% endblock %}
+{% block title %}Datenschutzerkl&auml;rung{% endblock %}
 {% block style %}
-    <link rel="stylesheet" href="{{ url_for('static', filename="css/impressum.css") }}">{% endblock %}
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/datenschutzerklaerung.css") }}">{% endblock %}
 
 {% block main %}
-    <div id='impressum'>
+    <div id='datenschutzerklaerung'>
         <h1>Datenschutz&shy;erkl&auml;rung</h1>
         <h2>1. Datenschutz auf einen Blick</h2>
         <h3>Allgemeine Hinweise</h3>
@@ -68,13 +68,13 @@ noreferrer">https://www.strato.de/datenschutz/</a>.</p>
             Kommunikation per E-Mail) Sicherheitsl&uuml;cken aufweisen kann. Ein l&uuml;ckenloser Schutz der Daten vor
             dem Zugriff durch Dritte ist nicht m&ouml;glich.</p>
         <h3>Hinweis zur verantwortlichen Stelle</h3>
-        <p>Die verantwortliche Stelle f&uuml;r die Datenverarbeitung auf
-            dieser Website ist:</p>
-        <p>Beispielfirma<br/>
-            Musterweg 10<br/>
-            90210 Musterstadt</p>
-        <p>Telefon: +49 (0) 123 44 55 66<br/>
-            E-Mail: info@beispielfirma.de</p>
+        <p>Der verantwortliche f&uuml;r die Datenverarbeitung auf dieser Website ist:</p>
+            <p>Jan Luis Holtmann<br>
+            Augsburg</p>
+        <p>
+            Telefon: +49 (0)163-6955847<br>
+            E-Mail: <a id="mail" href='mailto:webmaster@janluis.de'>webmaster@janluis.de</a>
+        </p>
         <p>Verantwortliche Stelle ist die nat&uuml;rliche oder juristische Person, die allein oder gemeinsam mit anderen
             &uuml;ber die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.&nbsp;B. Namen, E-Mail-Adressen o. &Auml;.) entscheidet.</p>
         <h3>Speicherdauer</h3>
